updated to work with Material for MkDocs v8

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,7 +30,7 @@ theme:
     repo: fontawesome/brands/github
   favicon: assets/favicon.png
   features:
-    - tabs
+    - navigation.tabs
 #    - instant
 
 # Extras
@@ -42,28 +42,28 @@ extra:
       link: https://twitter.com/lukepbutler_
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/in/lukepbutler/
+  analytics:
+    provider: google
+    property: UA-65873036-7
 
 extra_css:
   - stylesheets/colours.css
 
-# Google Analytics
-google_analytics:
-  - UA-65873036-7
-  - auto
-
 # Extensions
 markdown_extensions:
   - admonition
-  - codehilite:
-      guess_lang: false
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
   - toc:
       permalink: true
 
 plugins:
   - search # necessary for search to work
-  - awesome-pages
-  - minify:
-      minify_html: true
+  #  - awesome-pages
+#  - minify:
+#      minify_html: true
 
 nav:
   - Home: index.md
@@ -92,8 +92,3 @@ nav:
           - Simple Control: api/project-functions/simple-control.md
           - Rule Based Control: api/project-functions/rule-based-control.md
           - Enumerated Types: api/project-functions/enumerated-types.md
-  - Blog:
-      - List all articles: blog/index.md
-      - 2020:
-          - epanet-js Progress Report - May 2020: blog/2020/05-18-epanet-js-progress-report-2020.md
-          - Using MkDocs to build the epanet-js website: blog/2020/05-17-using-mkdocs-build-epanet-js-website.md
