Updates to work with the latest version

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -1,4 +1,5 @@
-lbutler:
-  name: Luke Butler
-  description: epanet-js maintainer
-  avatar: https://s.gravatar.com/avatar/33e08ddc8e6921ecf6416baa9931404a?s=80
+authors:
+  lbutler:
+    name: Luke Butler
+    description: epanet-js maintainer
+    avatar: https://s.gravatar.com/avatar/33e08ddc8e6921ecf6416baa9931404a?s=80
