--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ site_url: https://epanetjs.com/
 
 # Repository
 repo_name: epanet-js
-repo_url: https://github.com/modelcreate/epanet-js
+repo_url: https://github.com/epanet-js/epanet-js
 edit_uri: blob/master/website/docs/
 
 # Copyright
@@ -38,7 +38,7 @@ theme:
 extra:
   social:
     - icon: fontawesome/brands/github-alt
-      link: https://github.com/modelcreate/epanet-js
+      link: https://github.com/epanet-js/epanet-js
     - icon: fontawesome/brands/twitter
       link: https://twitter.com/lukepbutler_
     - icon: fontawesome/brands/linkedin
