July 2025 Progress Blog draft

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -1,5 +1,5 @@
 authors:
   lbutler:
     name: Luke Butler
-    description: epanet-js maintainer
+    description: Iterating co-founder, epanet-js maintainer
     avatar: https://s.gravatar.com/avatar/33e08ddc8e6921ecf6416baa9931404a?s=80
