--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 8
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
         with:
@@ -27,6 +33,14 @@ jobs:
           restore-keys: |
             mkdocs-material-
       #- run: apt-get install pngquant
+      - name: Install landing page dependencies
+        run: |
+          cd landing-page
+          pnpm install
+      - name: Build landing page
+        run: |
+          cd landing-page
+          pnpm build
       - run: pip install git+https://${GH_TOKEN}@github.com/squidfunk/mkdocs-material-insiders.git@9.6.16-insiders-4.53.16
       - run: pip install "mkdocs-material[imaging]"
       - run: mkdocs gh-deploy --force
