--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "astro-icon": "^1.0.4",
     "astro-navbar": "^2.3.9",
     "astro-seo": "^0.8.0",
+    "astro-toc": "^0.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
